<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegistroProductos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="grabar">Grabar</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="nuevoProducto">NuevoProducto</string>
    <string name="mapa">Mapa</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="recibir_nuevos_productos">Recibir_nuevo_producto</string>
    <string name="preferencias">Preferencia</string>
    <string name="opciones">Opciones</string>

</resources>
